# UNL.nvim

./: .gitignore  README.md  README_ja.md  minimal_init.lua
.github/workflows/: build-release-bins.yaml
doc/: unl.jax  unl.txt
lua/UNL/: api.lua  context.lua  init.lua  path.lua  picker.lua  project.lua  registry.lua  rpc.lua  status.lua  types.lua  utils.lua  vcs.lua
lua/UNL/analyzer/: build_cs.lua
lua/UNL/buf/: open.lua
lua/UNL/cache/: core.lua
lua/UNL/cmd/: cd.lua  cleanup.lua  delete.lua  refresh.lua  rescan_assets.lua  restart.lua  setup.lua  start.lua  status.lua  stop.lua  watch.lua
lua/UNL/command/: builder.lua
lua/UNL/config/: defaults.lua  init.lua  loader.lua  schema.lua
lua/UNL/db/: init.lua  remote.lua
lua/UNL/event/: events.lua  types.lua
lua/UNL/finder/: ancestor.lua  build_artifact.lua  engine.lua  engine_installed.lua  init.lua  insights.lua  module.lua  project.lua
lua/UNL/lock/: dir.lua
lua/UNL/logging/: init.lua  level.lua  logger.lua
lua/UNL/parser/: cpp.lua  ini.lua  init.lua  query.lua
lua/UNL/process/: util.lua
lua/UNL/provider/: init.lua  registry.lua
plugin/: UNL.lua
scanner/: Cargo.toml  out.json  out_api.json  out_small.json  test_input.json  test_input_api.json  test_input_small.json
scanner/src/: completion.rs  db.rs  lib.rs  main.rs  query.rs  refresh.rs  scanner.rs  server_main.rs  types.rs  uasset.rs  uba.rs
scanner/src/db/: mod.rs  path.rs
scanner/src/modify/: mod.rs  target.rs  uproject.rs
scanner/src/parser/: cpp.rs
scanner/src/query/: asset.rs  buffer.rs  check_includes.rs  class.rs  config.rs  file.rs  goto.rs  include.rs  mod.rs  module.rs  search.rs  usage.rs  util.rs
scanner/src/server/: asset.rs  asset_db.rs  handlers.rs  mod.rs  state.rs  utils.rs  watch_filter.rs  watcher.rs
scanner/src/vcs/: git.rs  mod.rs  none.rs  perforce.rs  svn.rs
scripts/: find_engine.bat  find_engine.sh  run_busted.lua
test/config/: config_allow_regression_default_spec.lua  config_defaults_spec.lua  config_localrc_spec.lua  config_project_filename_spec.lua  config_reload_spec.lua  config_user_override_spec.lua
test/context/: context_spec.lua
test/finder/: engine_finder_spec.lua  module_finder_spec.lua  project_finder_spec.lua
test/helper/: config.lua  finder.lua  logging.lua  picker_registry.lua  progress_test_util.lua  setup_progress.lua  vim_stub.lua
test/logging/: level_spec.lua  logger_spec.lua  writer_spec.lua
test/picker/: registry_resolve_spec.lua
test/progress/: capabilityes_spec.lua  create_spec.lua  registry_spec.lua  stage_methods_spec.lua
(+64 files in other folders)
