[package]
name = "unl-scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
tree-sitter = "0.26"
# taku25/tree-sitter-unreal-cpp をGitHubから取得
tree-sitter-unreal-cpp = { git = "https://github.com/taku25/tree-sitter-unreal-cpp" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
anyhow = "1.0"
streaming-iterator = "0.1"
sha2 = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
ignore = "0.4"
regex = "1.10"
