[package]
name = "unl-scanner"
version = "0.1.0"
edition = "2021"

[lib]
name = "unl_core"
path = "src/lib.rs"

[[bin]]
name = "unl-scanner"
path = "src/main.rs"

[[bin]]
name = "unl-server"
path = "src/server_main.rs"

[[bin]]
name = "test_uasset"
path = "src/bin/test_uasset.rs"

[dependencies]
tree-sitter = "0.26.5"
tree-sitter-unreal-cpp = { git = "https://github.com/taku25/tree-sitter-unreal-cpp", rev = "7bbb85f1fcc6e109c90cea2167e88a5a472910d3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29", features = ["bundled"] }
anyhow = "1.0"
rayon = "1.7"
ignore = "0.4"
regex = "1.9"
sha2 = "0.10"
memmap2 = "0.9"
streaming-iterator = "0.1"
"tree-sitter-language" = "0.1.3"

# RPC Server Dependencies
tokio = { version = "1.0", features = ["full"] }
notify = "6.1"
tracing = "0.1"
tracing-subscriber = "0.3"
rmp-serde = "1.1"
serde_bytes = "0.11"
rmpv = { version = "1.0", features = ["with-serde"] }
sysinfo = "0.30"
byteorder = "1.4"
lru = "0.16.3"
dashmap = "6.1.0"
parking_lot = "0.12"
